--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.0.3",
     "firebase": "^7.15.5",
     "materialize-css": "^1.0.0",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
